--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hecanyilmaz.github.io/deneme-project",
+  "homepage": "https://hecanyilmaz.github.io/deneme-project-2",
   "name": "final-project",
   "version": "0.1.0",
   "private": true,
